# templates

./: README.md  flake.nix
clang/: flake.nix
frontend/: flake.nix
python/atopile/: flake.nix  justfile
python/default/: flake.nix
rust/: flake.nix
rust/bevy/: Cargo.toml  flake.nix
rust/bevy/src/: lib.rs  main.rs
rust/cli/: Cargo.toml  flake.nix
rust/cli/src/: cli.rs  errors.rs  main.rs
rust/dioxus/: flake.nix
rust/lib/: flake.nix
rust/lib/.github/workflows/: build.yaml
rust/lib_ci/: flake.nix
rust/lib_ci/.github/workflows/: build.yaml
rust/main/: flake.nix
rust/sys/: Cargo.toml  build.rs  flake.nix
rust/sys/src/: errors.rs
rust/wasm/: Cargo.toml  flake.nix
shell/: flake.nix
