[package]
name = "hello"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
error-stack = "0.5"
thiserror = "2.0"
tokio = "1.43.1"
tracing = "0.1"
tracing-subscriber = "0.3"
