[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.5"
thiserror = "2.0"
tracing = "0.1"

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
cc = "1.2.12"
error-stack = "0.5"
ignore = "0.4.23"
tap = "1.0.1"
thiserror = "2.0"

[features]
bindgen = ["dep:bindgen"]
default = ["bindgen"]
